tests/webpack-test/cases/errors/harmony-import-missing2/module1.js
export * from "./a?1";
export * from "./missing1";
